--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html>
 	<head>
 	<meta charset="utf-8">
-	<title>Hello</title>
+	<title>Моя личная страница</title>
 	</head>
 	<body>
-	
-	Hello world!
+<left><h1>Корнеева Елена</h1></left>
+
+<left><img alt="Это я" width="15%" src="me.jpg"></left>	
+<br/>
+<h2>Контакты:</h2>
+Страничка <a href=vk.com/>vkontakte</a>
+<br/>
+<a href=https://github.com/Korneeva48>GitHub</a>
+<br/>
+Телефон: <b>+7**********</b>
+<br/>
+E-mail: <i>********@****</i>
 
 	</body>
 	</html>
