--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-	<meta charset="utf-8">
+	<meta charset="windows-1251">
 	<title>Моя личная страница</title>
 	</head>
 	<body>
